# SQL-Hero

./: .gitignore  .pre-commit-config.yaml  CONTENT_EXPANSION_SUMMARY.md  COURSE_API_IMPLEMENTATION.md  DASHBOARD_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  E2E_TESTING_IMPLEMENTATION.md  E2E_TESTS_QUICKSTART.md  FINAL_TESTING_COMPLETION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  LEADERBOARD_IMPLEMENTATION.md  MERGE_RESOLUTION_SUMMARY.md  MODULES_MAP_FEATURE_SUMMARY.md  Makefile  README.md  SANDBOX_IMPLEMENTATION_SUMMARY.md  SQL_EDITOR_IMPLEMENTATION.md  TELEGRAM_AUTH_IMPLEMENTATION.md  TELEGRAM_WEBAPP_INTEGRATION_SUMMARY.md  TEST_SUITE_SUMMARY.md  docker-compose.yml
backend/: .env.example  ALEMBIC.md  AUTH_IMPLEMENTATION.md  CHANGELOG_SEED.md  COURSES_API.md  DATABASE.md  Dockerfile  QUERY_VALIDATION_GUARD.md  README.md  SANDBOX_IMPLEMENTATION.md  SCAFFOLD.md  SEED.md  manage.py  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 09a56bd80759_create_database_schema_for_users_.py  a8af3e20bfe3_add_last_active_date_to_users.py  (+3 more)
backend/app/: main.py
backend/scripts/: seed.sh
backend/tests/: test_achievements.py  test_activity.py  test_activity_api.py  test_auth_telegram.py  test_config.py  test_courses.py  test_database.py  test_leaderboard.py  test_leaderboard_api.py  test_main.py  test_migrations.py  test_models.py  test_notifications.py  test_notifications_api.py  test_progress.py  test_query_validation_integration.py  test_query_validator.py  test_sandbox_config.py  test_sandbox_executor.py  test_sandbox_service.py  test_seed.py
(+182 files in other folders)
