[tool.poetry]
name = "backend"
version = "0.1.0"
description = "FastAPI backend service"
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.120.3"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
aiomysql = "^0.2.0"
alembic = "^1.13.0"
pydantic-settings = "^2.0.0"
python-dotenv = "^1.0.0"
pyjwt = "^2.8.0"
cryptography = "^46.0.3"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.3"
mypy = "^1.18.2"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
httpx = "^0.28.1"
aiosqlite = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
